# ChangeLog for dev-ruby/exception_notification
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*exception_notification-4.1.0 (17 Apr 2015)

  17 Apr 2015; Hans de Graaff <graaff@gentoo.org>
  +exception_notification-4.1.0.ebuild:
  Version bump.

  17 Apr 2015; Hans de Graaff <graaff@gentoo.org>
  -exception_notification-2.6.1.ebuild:
  Cleanup.

  02 Jul 2014; Hans de Graaff <graaff@gentoo.org>
  exception_notification-3.0.1.ebuild:
  Add ruby20.

  26 May 2014; Hans de Graaff <graaff@gentoo.org>
  exception_notification-4.0.1.ebuild:
  Add ruby20, ruby21.

*exception_notification-4.0.1 (24 Oct 2013)

  24 Oct 2013; Hans de Graaff <graaff@gentoo.org>
  +exception_notification-4.0.1.ebuild:
  Version bump.

  24 Oct 2013; Hans de Graaff <graaff@gentoo.org>
  -exception_notification-2.5.2.ebuild, -exception_notification-3.0.0.ebuild:
  Cleanup.

*exception_notification-3.0.1 (14 Feb 2013)

  14 Feb 2013; Hans de Graaff <graaff@gentoo.org>
  +exception_notification-3.0.1.ebuild:
  Version bump.

  21 Nov 2012; Hans de Graaff <graaff@gentoo.org>
  exception_notification-3.0.0.ebuild:
  Completely remove the misguided campfire support.

  16 Nov 2012; Hans de Graaff <graaff@gentoo.org>
  exception_notification-3.0.0.ebuild:
  Actually install our fixed gemspec.

*exception_notification-3.0.0 (16 Nov 2012)

  16 Nov 2012; Hans de Graaff <graaff@gentoo.org>
  +exception_notification-3.0.0.ebuild:
  Version bump.

*exception_notification-2.6.1 (25 Apr 2012)

  25 Apr 2012; Hans de Graaff <graaff@gentoo.org>
  +exception_notification-2.6.1.ebuild:
  Version bump. Add ruby19.

*exception_notification-2.5.2 (29 Sep 2011)

  29 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  +exception_notification-2.5.2.ebuild, +metadata.xml:
  Initial import.
