@@ -1,3 +1,4 @@
 DIST exception_notification-3.0.1.gem 99328 SHA256 4570fcecbd77f658601ee422e341dea76731cc2506c3b9776e10a08cc58a150e SHA512 31ca622bd73144fce6ea6b8f86738026ca611dd47aca17f2a3a337e4dfd17b9aa30c19b4a209ea8ab0d865e2cb00b7aa851e015f54c67e7f279a0ec7c5b38e2f WHIRLPOOL 10eb4ab3de3c0c2c0eda927bbb3b222bbdf528b21db8b6a5091e7b7431f8e911bf396b49470dbb05bf5b4c6ff797555defb1ecdf4470953180433cbf300d1fdd
 DIST exception_notification-4.0.1.gem 108544 SHA256 e00fc5bc14b77d496ea325c05dcfb468008caf499837a77d570fa9fbd0d4515a SHA512 06c5d76cdfccc92a1975fc17e7de571295326f0dda1180aaeba78e7f56b6f2c3f2c9c2277c4d35cab8e9ecb89d52f829311689d7880d90b7420261941877bf60 WHIRLPOOL 17af6bac16d4c36a291767f916a5215ba8923cc930a783c5730cfde59c90beadc733dda40173ffc93c6d8bc8f2e5e4fc6d810b57a37d778a1baa3e70a58bd554
 DIST exception_notification-4.1.0.gem 113152 SHA256 457376fe18f2feb2607c686ec36d4b813723bb48776004de325a5787ddd3f2be SHA512 35922ab080bf71bc008fd5df5a1be1762b3dbcbb504c191542fd3d7d163066a65bfcfc5a513ff0486690c8ef3a8b6cfea2a4e82806dd644e2b6ce9ff832661a1 WHIRLPOOL 0f2a65865193160076739f893258b83402c5956784a21aaa44ca3ebd6c99482793d10a20ef7c411be6143751c737833068be5c2b0ece9ea6f37c3f68aea93996
+DIST exception_notification-4.1.1.gem 113664 SHA256 e12d2bb35cdb482869c5d6f4f5a8982f0716301d418ff6aa537f0ee8612c08ab SHA512 c7cb69947ee519014d11fc928eb85280067e9102620958b2dff5afc8cb3603018f62cc1ca42b7721626c8007e0386ea7d21246be899c165e20fc947656f4c7de WHIRLPOOL 79c9041cf5309931f1b6062ff896acca5301f896c795373c3bc2b92511df991fd5350fe6feaf479477a8ca2b4b49d531cf92d881c215edc94e57c9c985967905
