@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*exception_notification-4.1.1 (12 Jun 2015)
+
+  12 Jun 2015; Hans de Graaff <graaff@gentoo.org>
+  +exception_notification-4.1.1.ebuild:
+  Version bump.
+
 *exception_notification-4.1.0 (17 Apr 2015)
 
   17 Apr 2015; Hans de Graaff <graaff@gentoo.org>
